# LJ-Sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
include/core/: particle.hpp
tests/: CMakeLists.txt  cpp20_test.cpp  cpp23_test.cpp  cuda_test.cu  eigen_test.cpp
